--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
     </div>
     <div class="bg-secondary mx-5 mt-4 text-white text-center" style="height: 27px; text-align: center;"><h5>Shops</h5></div>
     {%if shops%}
+        <div style="display: flex; justify-content: center;">
             <div class="container p-0 rounded-2">
                 <div class="row row-cols-1 row-cols-sm-1 row-cols-md-4">
                 {%for shop in shops%}
@@ -126,32 +127,35 @@
                 {%endfor%}
                 </div>
             </div>
+        </div>
     {%else%}
         <h5 class="text-center">No Shops Available</h5>
     {%endif%}
     <div class="bg-secondary mx-5 mb-4 text-white text-center" style="height: 27px; text-align: center;"><h5>All Products</h5></div>
     {%if products%}
-        <div class="container rounded-2">
-            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-4">
-                {%for product in products%}
-                    <div class="card bg-light col mx-3 text-center mb-4">
-                        <div class="card-header">
-                            <img src="{{product['link']}}" width="170" height="170">
+        <div style="display: flex; justify-content: center;">
+            <div class="container rounded-2">
+                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-4">
+                    {%for product in products%}
+                        <div class="card bg-light col mx-3 text-center mb-4">
+                            <div class="card-header">
+                                <img src="{{product['link']}}" width="170" height="170">
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">{{product["name"]}}</h3>
+                                <font size="5">{{product["description"]}}</font>
+                                <h5 class="mt-2"><strong>Price:</strong> ${{product["price"]}}</h5>
+                                <h5><strong>Quantity:</strong> {{product["quantity"]}}</h5>
+                                <form action="/add_cart_home/{{product['_id']}}" method="post">
+                                    <div class="d-flex justify-content-center">
+                                        <input name="quantity" type="text" class="form-control me-3" placeholder="Quantity:" style="width: 140px">
+                                        <button type="submit" class="btn btn-success">Add to Cart</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <h3 class="card-title">{{product["name"]}}</h3>
-                            <font size="5">{{product["description"]}}</font>
-                            <h5 class="mt-2"><strong>Price:</strong> ${{product["price"]}}</h5>
-                            <h5><strong>Quantity:</strong> {{product["quantity"]}}</h5>
-                            <form action="/add_cart_home/{{product['_id']}}" method="post">
-                                <div class="d-flex justify-content-center">
-                                    <input name="quantity" type="text" class="form-control me-3" placeholder="Quantity:" style="width: 140px">
-                                    <button type="submit" class="btn btn-success">Add to Cart</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                {%endfor%}
+                    {%endfor%}
+                </div>
             </div>
         </div>
     {%else%}
