--- a/templates/owner_shop.html
+++ b/templates/owner_shop.html
@@ -21,8 +21,11 @@
                 </ul>
             </div>
             <span>
-                <form action="/logout" method="post">
+                <form action="/logout" method="post" class="d-inline">
                     <button type="submit" class="btn btn-danger">Logout</button>
+                </form>
+                <form action="/delete_shop" method="post" class="d-inline ms-2" onsubmit="return confirm('Are you sure you want to delete your shop? This action cannot be undone.');">
+                    <button type="submit" class="btn btn-warning">Delete Shop</button>
                 </form>
             </span>
         </div>
